# pythonScripts

./: .gitignore  LICENSE  README.md  aussen_innen_temperatur.py  dwd_reader.py  main.py  netatmo_influxdb.py  pyproject.toml  requirements.txt  wohnzimmer_temperatur.py
.github/workflows/: publish.yml
helpers/: helper_env.py  helper_influx.py  helper_netatmo.py  helper_redis.py  helper_telegram.py  influx.py  netatmo.py  redis.py
pythonScripts/: main.py
pythonScripts/helpers/: helper_env.py  helper_influx.py  helper_mysql.py  helper_redis.py  helper_telegram.py
pythonScripts/scripts/: aussen_innen_temperatur.py  dwd_reader.py  netatmo_influxdb.py  sbfspot_influxdb.py  wohnzimmer_temperatur.py
